made changes to files

--- a/index.html
+++ b/index.html
@@ -4,9 +4,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Yonah Veffer Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="container">
+            <div class="logo">Yonah Veffer - Front end dev</div>
+            <ul class="navigation-items">
+                <li><a href="#">About me</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+    <header class="header">
+        <div class="container">
+            <div>
+                <h2>About me</h2>
+                <p>
+                    Hello, my name is Yonah Veffer and I am a web developer. 
+                    I began my coding journey in mid-2022, and since then, I have been passionately dedicated to learning the art of programming. 
+                    I have recently created a portfolio site from scratch using HTML, CSS, and JS to showcase my skills.
+                    <br>
+                    To enhance my learning experience, I have been using Codecademy as my primary learning resource. Through the various programming exercises, 
+                    I have gained a deep understanding of different programming concepts, including data structures, algorithms, and web development technologies.
+                    <br><br>
+                    I believe that practice is the key to success in programming. As a result, 
+                    I have been actively seeking out new projects to work on and have been honing my skills through personal projects and collaborations with other developers.
+                    I am committed to constantly improving my skills and keeping up with the latest developments in the field.
+                    <br>
+                    I am excited about the prospect of landing a job soon as a web developer. 
+                    With my strong foundation in coding and my eagerness to learn and grow, I am confident that I can contribute meaningfully to any development team. 
+                    I look forward to the opportunity to put my skills to use and to further my career as a web developer.
+                </p>
+                <br>
+            </div>
+            <img src="/Portfolio pic.png" alt="Me">
+        </div>
+    </header>
+
+    <section class="projects">
+        <div class="container">
+        <h2>Projects</h2>
+        <div class="message-generater">
+            <h3>Random message generator</h3>
+            <button id="button">Generate message</button>
+            <p id="random-message"></p>
+        </div>
+        </div> 
+    </section>
+    <section class="skills">
+        <div class="container">
+            <h2>Skills</h2>
+            <div class="coding-icons">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" alt="The logo icon for HTML 5" title="HTML 5">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg" alt="The logo icon for CSS3" title="CSS 3" alt="Html icon">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg" alt="The logo icon for GitHub" title="GitHub">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" />
+          
+            </div>
+        </div>
+    </section>
+    <script src="/script.js"></script>
 </body>
 </html>
