--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </p>
                 <br>
             </div>
-            <img src="./Portfolio pic.png" alt="Me">
+            <img src="Portfolio pic.png" alt="Me">
         </div>
     </header>
 
@@ -71,6 +71,6 @@
             </div>
         </div>
     </section>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
