html file wasn't linked properly

--- a/challenges.html
+++ b/challenges.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <a href="/index.html" class="logo">Yonah Veffer - Front end dev</a>
+            <a href="./index.html" class="logo">Yonah Veffer - Front end dev</a>
             <ul class="navigation-items">
                 <li><a href="#">About me</a></li>
                 <li><a href="./challenges.html">Challenges</a></li>
