Fixed reponsive navbar +minor changes

--- a/challenges.html
+++ b/challenges.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Source+Code+Pro&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <nav class="navbar">
         <div class="container">
-            <a href="/portfolio-site" class="logo">Yonah Veffer - Web developer</a>
+            <a href="/portfolio-site" class="logo">&#60;Yonah Veffer - Web developer&#62;</a>
             <ul class="navigation-items">
                 <li><a href="/portfolio-site">About me</a></li>
                 <li><a href="/portfolio-site#skills">Skills</a></li>
@@ -175,6 +175,7 @@
         <ul>
             <li>Phone: 058-321-4176</li>
             <li>Email: yonahveffer@gmail.com</li>
+            <li>GitHub: <a style="color: rgb(220, 243, 243);" href="http://github.com/Yonahv">github.com/Yonahv</a></li>
         </ul>
        
     </footer>
