--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Poppins:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Source+Code+Pro&display=swap" rel="stylesheet">
+
+    
+
 </head>
 <body>
     <nav class="navbar">
         <div class="container">
-            <div class="logo">Yonah Veffer - Web developer</div>
+            <div class="logo">&#60;Yonah Veffer - Web developer&#62;</div>
             <ul class="navigation-items">
                 <li><a href="#">About me</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -69,6 +72,7 @@
         <ul>
             <li>Phone: 058-321-4176</li>
             <li>Email: yonahveffer@gmail.com</li>
+            <li>GitHub: <a style="color: rgb(220, 243, 243);" href="http://github.com/Yonahv">github.com/Yonahv</a></li>
         </ul>
        
     </footer>
