--- a/challenges.html
+++ b/challenges.html
@@ -14,10 +14,10 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <a href="/portfolio-site.html" class="logo">&#60;Yonah Veffer - Web developer&#62;</a>
+            <a href="/index.html" class="logo">&#60;Yonah Veffer - Web developer&#62;</a>
             <ul class="navigation-items">
-                <li><a href="/portfolio-site.html">About me</a></li>
-                <li><a href="/portfolio-site#skills">Skills</a></li>
+                <li><a href="/index.html">About me</a></li>
+                <li><a href="/index.html#skills">Skills</a></li>
                 <li><a href="./challenges.html">Challenges</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
