--- a/challenges.html
+++ b/challenges.html
@@ -11,13 +11,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Source+Code+Pro&display=swap" rel="stylesheet">
 
 </head>
-<body>
+<body>s
     <nav class="navbar">
         <div class="container">
             <a href="/index.html" class="logo">&#60;Yonah Veffer - Web developer&#62;</a>
             <ul class="navigation-items">
-                <li><a href="/index.html">About me</a></li>
-                <li><a href="/index.html#skills">Skills</a></li>
+                <li><a href="/portfolio-site">About me</a></li>
+                <li><a href="/index.html">Skills</a></li>
                 <li><a href="./challenges.html">Challenges</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
