added candelighting project

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
     <section class="projects">
         <div class="container">
             <h2 id="projects">Projects</h2>
-            <p>Here is a simple project I made with Vue.js - <a href="https://yonahv.github.io/timer/">Reaction timer</a></p>
+            <p><a href="https://yonahv.github.io/timer/">Reaction timer</a>- Vue.js</p>
+            <p><a href="https://yonahv.github.io/candle-lighting/">Candle lighting</a>- Vue.js</p>
             <p>For more check out my Github - <a href="https://github.com/Yonahv">GitHub </a></p>
             <p>A couple of JS challenges here - <a href="./challenges.html">Challenges</a></p>
         </div>
